vendor/fixed-macro/tests/compile-fail/types-overflow-02.rs
fn main() {
    fixed_macro::types::I4F4!(-8.99);
}
